<resources>
    <string name="app_name">EventsAdmin</string>
    <string name="events_admin_intro">Book Venues,\nPersonalize Invitations,\nFind Your Perfect Attire!</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or">OR</string>
    <string name="send_otp">Send OTP</string>
    <string name="log_in_sign_up">Log In / Sign Up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="go_back"><![CDATA[<- Go Back]]></string>
    <string name="vendors">Vendors</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>